Não sei do que é

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,9 +1,9 @@
 development.driver=com.mysql.jdbc.Driver
 development.username=root
-development.password=
+development.password=123456
 development.url=jdbc:mysql://localhost/prohouse
 
 test.driver=com.mysql.jdbc.Driver
 test.username=root
-test.password=
+test.password=123456
 test.url=jdbc:mysql://localhost/prohouse
